# SystemSentinel

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  USER_STORY_MAP.md  install.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
config/: setup_requirements.yaml
docs/: chat-adapters.md  configuration.md
packaging/: sentinel.service
system_sentinel/: __main__.py  geoip.py
system_sentinel/alerts/: formatters.py  formatters_connection.py  formatters_login.py  formatters_service.py  formatters_system.py  handler.py  models.py  quiet_hours.py  remediation.py
system_sentinel/charts/: __init__.py  base.py  registry.py
system_sentinel/charts/renderers/: __init__.py  image.py  text.py
system_sentinel/chat/: access_control.py  base.py  command_dispatcher.py  command_graph.py  command_handlers.py  command_insights.py  command_metrics.py  command_support.py  digest_builder.py  maintenance_utils.py  registry.py  router.py
system_sentinel/chat/adapters/discord/: adapter.py
system_sentinel/cli/: main.py
system_sentinel/core/: context.py  daemon.py  event_bus.py  exceptions.py  scheduler.py  self_update.py  snapshots.py  time_config.py
system_sentinel/dashboard/: __init__.py  app.py  data.py  entrypoint.py
system_sentinel/db/: aggregate_models.py  audit_repository.py  connection.py  connection_repository.py  directory_changes_repository.py  login_repository.py  metrics_repository.py  old_files_repository.py  vulnerability_repository.py
system_sentinel/db/migrations/: 0001_initial.sql  0002_add_login_attempts.sql  0003_add_connections.sql  0004_add_metrics.sql  0005_add_connection_attempts_and_monitor_state.sql  0006_add_old_file_scans.sql  0007_add_connection_classifications.sql  0008_add_login_anomalies.sql  0009_add_directory_change_events.sql  0010_add_vulnerability_scans.sql
system_sentinel/llm/: __init__.py  base.py  client.py  registry.py
system_sentinel/llm/providers/: _common.py
system_sentinel/llm/providers/anthropic/: provider.py
system_sentinel/llm/providers/mistral/: provider.py
system_sentinel/llm/providers/ollama/: provider.py
system_sentinel/llm/providers/openai/: provider.py
system_sentinel/metrics_export/: __init__.py  http_server.py
system_sentinel/monitors/: base.py  connection_intent.py  connections.py  cpu.py  daily_digest.py  directory_changes.py  disk.py  gpu.py  login_log_sources.py  login_parsing.py  logins.py  network.py  old_files.py  ram.py  registry.py  services.py  weekly_digest.py
system_sentinel/setup/: __init__.py  config_wizard.py  dependency_installer.py  optional_features.py  sudoers_steps.py  systemd_installer.py  systemd_service_steps.py  wizard.py
system_sentinel/tools/: base.py
system_sentinel/tools/firewall/: backends.py  tool.py
system_sentinel/tools/hardening/: tool.py
system_sentinel/tools/storage/: tool.py
system_sentinel/tools/update/: backends.py  tool.py
system_sentinel/tools/vulnscan/: tool.py
tests/: conftest.py
tests/unit/alerts/: test_handler.py
tests/unit/chat/: test_access_control.py  test_base.py  test_command_dispatcher.py  test_command_metrics.py  test_digest_builder.py  test_discord_adapter.py  test_maintenance_utils.py  test_registry.py  test_router.py  test_text_chart_renderer.py
tests/unit/cli/: test_main.py
tests/unit/core/: test_daemon.py  test_event_bus.py  test_scheduler.py  test_self_update.py  test_snapshots.py  test_time_config.py
tests/unit/dashboard/: test_data.py  test_state.py
tests/unit/db/: test_audit_repository.py  test_connection_repository.py  test_daily_aggregates.py  test_directory_changes_repository.py  test_login_repository.py  test_metrics_repository.py  test_old_files_repository.py  test_vulnerability_repository.py
tests/unit/llm/: test_client.py  test_registry.py
tests/unit/metrics_export/: __init__.py  test_http_server.py
tests/unit/monitors/: test_connections.py  test_cpu.py  test_daily_digest.py  test_directory_changes.py  test_disk.py  test_gpu.py  test_logins.py  test_network.py  test_old_files.py  test_ram.py  test_registry.py  test_services.py  test_weekly_digest.py
tests/unit/setup/: test_config_wizard.py  test_dependency_installer.py  test_optional_features.py  test_systemd_installer.py  test_wizard.py
tests/unit/tools/: test_firewall_backends.py  test_firewall_tool.py  test_hardening_tool.py  test_required_packages_tool.py  test_security_update_tool.py  test_storage_report_tool.py  test_update_backends.py  test_vulnscan_tool.py
user_stories/: US-001-auto-security-patches.md  US-002-required-packages.md  US-003-ssh-login-logging.md  US-004-unknown-ip-alert.md  US-005-system-metrics-collection.md  US-006-daily-metrics-report.md  US-007-list-old-files.md  US-008-auto-delete-files.md  US-009-chat-critical-alerts.md  US-010-daily-digest.md  US-011-update-snapshots.md  US-012-service-health-checks.md  US-013-system-hardening.md  US-014-declarative-firewall.md  US-015-login-anomaly-detection.md  US-016-gpu-metrics.md  US-017-alert-thresholds.md  US-018-directory-change-alerts.md  US-019-storage-usage-report.md  US-020-chat-commands.md  US-021-alert-severity-levels.md  US-022-llm-anomaly-explanation.md  US-023-llm-auto-remediation.md  US-024-tui-dashboard.md  US-025-audit-log.md  US-026-vulnerability-scanning.md  US-027-2fa-audit.md  US-028-prometheus-export.md  US-029-historical-metrics.md  US-030-file-integrity-monitoring.md  US-031-weekly-trend-summaries.md  US-032-quiet-hours.md  US-033-choose-ollama-model.md  US-034-chat-allowed-users.md  US-035-first-time-setup.md  US-036-mandatory-dependency-install.md  US-037-optional-feature-selection.md  US-038-guided-configuration.md  US-039-connection-intent-classification.md  US-040-daemon-self-update-and-restart.md  (+3 more)
