[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "system-sentinel"
version = "0.1.0"
description = "Automated Linux system maintenance and monitoring daemon"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "apscheduler>=3.10",
    "aiosqlite",
    "psutil",
    "watchdog",
    "click",
    "pyyaml",
    "httpx",
    "plotext",
]

[project.optional-dependencies]
discord    = ["discord.py>=2.0"]
telegram   = ["python-telegram-bot>=20"]
gpu        = ["gputil", "pynvml"]
prometheus = ["prometheus_client"]
tui        = ["rich", "textual"]
geoip      = ["geoip2"]
graphs     = ["matplotlib"]
dev        = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff",
]
all = [
    "discord.py>=2.0",
    "python-telegram-bot>=20",
    "gputil",
    "pynvml",
    "prometheus_client",
    "rich",
    "textual",
    "geoip2",
    "matplotlib",
]

[project.scripts]
sentinel = "system_sentinel.cli.main:cli"

[project.entry-points."sentinel.tools"]
security_update = "system_sentinel.tools.update.tool:SecurityUpdateTool"
harden          = "system_sentinel.tools.harden.tool:HardenTool"
cleanup         = "system_sentinel.tools.cleanup.tool:CleanupTool"
packages        = "system_sentinel.tools.packages.tool:RequiredPackagesTool"
snapshot        = "system_sentinel.tools.snapshot.tool:SnapshotTool"
firewall        = "system_sentinel.tools.firewall.tool:FirewallTool"
storage         = "system_sentinel.tools.storage.tool:StorageTool"
vulnscan        = "system_sentinel.tools.vulnscan.tool:VulnScanTool"

[project.entry-points."sentinel.monitors"]
cpu            = "system_sentinel.monitors.cpu:CpuMonitor"
ram            = "system_sentinel.monitors.ram:RamMonitor"
disk           = "system_sentinel.monitors.disk:DiskMonitor"
network        = "system_sentinel.monitors.network:NetworkMonitor"
gpu            = "system_sentinel.monitors.gpu:GpuMonitor"
logins         = "system_sentinel.monitors.logins:LoginMonitor"
connections    = "system_sentinel.monitors.connections:ConnectionMonitor"
services       = "system_sentinel.monitors.services:ServiceMonitor"
file_integrity = "system_sentinel.monitors.file_integrity:FileIntegrityMonitor"

[project.entry-points."sentinel.chat_adapters"]
discord = "system_sentinel.chat.adapters.discord.adapter:DiscordAdapter"

[project.entry-points."sentinel.llm_providers"]
ollama = "system_sentinel.llm.providers.ollama.provider:OllamaProvider"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking (move type-only imports into TYPE_CHECKING blocks)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — handled by formatter, not linter
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
